plugins {
    id 'fabric-loom' version '1.6-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
}

processResources {
    inputs.property 'version', project.version
    filesMatching('fabric.mod.json') {
        expand 'version': project.version
    }

    doLast {
        def textureSources = [
                ['cctv.png.b64', 'assets/korime_scene/textures/block/cctv.png'],
                ['item_editor.png.b64', 'assets/korime_scene/textures/block/item_editor.png'],
                ['evidence_magnifier.png.b64', 'assets/korime_scene/textures/block/evidence_magnifier.png'],
                ['evidence_magnifier.png.b64', 'assets/korime_scene/textures/block/evidence.png']
        ]
        textureSources.each { pair ->
            def source = file("src/main/resource-base64/${pair[0]}")
            def target = file("${destinationDir}/${pair[1]}")
            target.parentFile.mkdirs()
            target.bytes = source.text.trim().decodeBase64()
        }

        // GitHub's text-oriented editing path previously truncated the tails of these
        // binary assets. Keep the untouched prefix and restore the verified original
        // tail during resource processing so every clean build produces identical media.
        def restoreVerifiedTail = { String resourcePath, int prefixLength, String tailSource ->
            def target = file("${destinationDir}/${resourcePath}")
            byte[] current = target.bytes
            if (current.length < prefixLength) {
                throw new GradleException("Resource is shorter than its verified prefix: ${resourcePath}")
            }
            byte[] tail = file("src/main/resource-base64/${tailSource}").text.trim().decodeBase64()
            def restored = new ByteArrayOutputStream(prefixLength + tail.length)
            restored.write(current, 0, prefixLength)
            restored.write(tail)
            target.bytes = restored.toByteArray()
        }

        restoreVerifiedTail(
                'assets/korime_scene/textures/item/investigation_board.png',
                7162,
                'investigation_board.tail.b64'
        )
        restoreVerifiedTail(
                'assets/korime_scene/sounds/magnifying_glass_use.ogg',
                7500,
                'magnifying_glass_use.tail.b64'
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
    options.encoding = 'UTF-8'
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {
    from('LICENSE') {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

publishing {
    publications {
        create('mavenJava', MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }
}
